bitbybit/tests/no_compile/invalid_bit_pos/invalid_bits_pos_array_u16.stderr
error: bitfield!: Field multi_bit_field requires 18 bits, but only has (16)
 --> tests/no_compile/invalid_bit_pos/invalid_bits_pos_array_u16.rs:5:5
  |
5 |     #[bits([0, 16..=17], rw)]
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^
